typescript/checker/tests/conformance/parser/ecmascript5/CatchClauses/parserCatchClauseWithTypeAnnotation1.ts.stderr
error: TS1196
 --> $DIR/tests/conformance/parser/ecmascript5/CatchClauses/parserCatchClauseWithTypeAnnotation1.ts:2:13
  |
2 | } catch (e: Error) {
  |             ^^^^^

